grid overflow now correctly scrolling fixed height

--- a/src/app/main-content-component/main-content-component.component.css
+++ b/src/app/main-content-component/main-content-component.component.css
@@ -34,6 +34,7 @@
     grid-template-columns:repeat(auto-fill, minmax(10rem, 1fr));
     grid-gap: 5%;
     padding: 1rem;
+    height: 250px;
 }
 
 .card-body {
